[package]
name = "csv_translation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.11.22", features = ["json", "blocking", "multipart"] }
serde = { version= "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"] }
